force-app/main/default/objects/Case/fields/Last_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Body__c</fullName>
    <label>Last_Message_Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>