force-app/main/default/objects/Case/fields/Last_Message_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Timestamp__c</fullName>
    <label>Last_Message_Timestamp</label>
    <type>DateTime</type>
</CustomField>