force-app/main/default/objects/Case/fields/SLA_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SLA_Expiry__c</fullName>
    <label>SLA_Expiry</label>
    <type>DateTime</type>
</CustomField>