force-app/main/default/objects/Case/fields/Tempo_Restante_SLA__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Restante_SLA__c</fullName>
    <formula>IF(
    ISBLANK(SLA_Expiry__c),
    &quot;—&quot;,
    TEXT( FLOOR( ( SLA_Expiry__c - NOW() ) * 24 ) ) &amp; &quot;h &quot; &amp;
    TEXT( FLOOR( MOD( ( SLA_Expiry__c - NOW() ) * 24 * 60, 60 ) ) ) &amp; &quot;m&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo_Restante_SLA</label>
    <type>Text</type>
</CustomField>