force-app/main/default/objects/Case/fields/WhatsApp_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Conversation_Id__c</fullName>
    <label>WhatsApp_Conversation_Id</label>
    <type>TextArea</type>
</CustomField>